# factory-ai-proj

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/design/: adom-parity-requirements.md  current-game-design.md  phase8-detailed-design.md  sample-usage.md
src/adom_clone/: __init__.py  main.py
src/adom_clone/client/: __init__.py  pygame_client.py
src/adom_clone/content/: __init__.py  character_options.json  spawns.json
src/adom_clone/core/: __init__.py
src/adom_clone/core/ecs/: __init__.py  components.py  store.py
src/adom_clone/core/game/: __init__.py  actions.py  content.py  session.py  systems.py
src/adom_clone/core/world/: __init__.py  generators.py  map_model.py
tests/: test_combat_inventory.py  test_ecs_store.py  test_phase5_features.py  test_phase6_features.py  test_phase7_features.py  test_phase8_features.py  test_save_load.py  test_world_transitions.py
